# snake-ddqn

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  _config.yml  settings.txt  setup.sh
docs/: _config.yml  index.md  settinigs.md
include/: MapModel.h  MapView.h  Settings.h  aiControl.h  consoleUI.h  control.h  game.h  graphics.h  keyboardControl.h  mapModel.h  mapView.h  mathFuncs.h  math_funcs.h  menu.h  mylib.h  neuralNetwork.h  perceptron.h  settings.h  simpleNN.h  snake.h
presets/: map3.txt  settings1.txt  settings2.txt
src/: MapModel.cpp  MapView.cpp  aiControl.cpp  consoleUI.cpp  control.cpp  game.cpp  graphics.cpp  keyboardControl.cpp  logos.cpp  main.cpp  mapModel.cpp  mapView.cpp  mathFuncs.cpp  math_funcs.cpp  menu.cpp  mylib.cpp  perceptron.cpp  settings.cpp  simpleNN.cpp  snake.cpp
